# storageapi/model/refresh_data.go
@@ -1,53 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package model
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// RefreshData refresh data
-//
-// swagger:model RefreshData
-type RefreshData struct {
-
-	// receive amount
-	ReceiveAmount int64 `json:"receiveAmount,omitempty"`
-
-	// user ID
-	UserID string `json:"userID,omitempty"`
-}
-
-// Validate validates this refresh data
-func (m *RefreshData) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this refresh data based on context it is used
-func (m *RefreshData) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *RefreshData) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *RefreshData) UnmarshalBinary(b []byte) error {
-	var res RefreshData
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
