# storageapi/restapi/op/create_session_responses.go
@@ -27,7 +27,7 @@ type CreateSessionOK struct {
 	/*
 	  In: Body
 	*/
-	Payload *model.SesseionQRCode `json:"body,omitempty"`
+	Payload *model.Session `json:"body,omitempty"`
 }
 
 // NewCreateSessionOK creates CreateSessionOK with default headers values
@@ -37,13 +37,13 @@ func NewCreateSessionOK() *CreateSessionOK {
 }
 
 // WithPayload adds the payload to the create session o k response
-func (o *CreateSessionOK) WithPayload(payload *model.SesseionQRCode) *CreateSessionOK {
+func (o *CreateSessionOK) WithPayload(payload *model.Session) *CreateSessionOK {
 	o.Payload = payload
 	return o
 }
 
 // SetPayload sets the payload to the create session o k response
-func (o *CreateSessionOK) SetPayload(payload *model.SesseionQRCode) {
+func (o *CreateSessionOK) SetPayload(payload *model.Session) {
 	o.Payload = payload
 }
 
@@ -60,6 +60,60 @@ func (o *CreateSessionOK) WriteResponse(rw http.ResponseWriter, producer runtime
 }
 
 func (o *CreateSessionOK) CreateSessionResponder() {}
+
+// CreateSessionNotFoundCode is the HTTP code returned for type CreateSessionNotFound
+const CreateSessionNotFoundCode int = 404
+
+/*
+CreateSessionNotFound hash not found
+
+swagger:response createSessionNotFound
+*/
+type CreateSessionNotFound struct {
+}
+
+// NewCreateSessionNotFound creates CreateSessionNotFound with default headers values
+func NewCreateSessionNotFound() *CreateSessionNotFound {
+
+	return &CreateSessionNotFound{}
+}
+
+// WriteResponse to the client
+func (o *CreateSessionNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
+
+func (o *CreateSessionNotFound) CreateSessionResponder() {}
+
+// CreateSessionInternalServerErrorCode is the HTTP code returned for type CreateSessionInternalServerError
+const CreateSessionInternalServerErrorCode int = 500
+
+/*
+CreateSessionInternalServerError Internal error
+
+swagger:response createSessionInternalServerError
+*/
+type CreateSessionInternalServerError struct {
+}
+
+// NewCreateSessionInternalServerError creates CreateSessionInternalServerError with default headers values
+func NewCreateSessionInternalServerError() *CreateSessionInternalServerError {
+
+	return &CreateSessionInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *CreateSessionInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
+
+func (o *CreateSessionInternalServerError) CreateSessionResponder() {}
 
 type CreateSessionNotImplementedResponder struct {
 	middleware.Responder
