# storageapi/swagger.yml
@@ -69,15 +69,15 @@ definitions:
       - value
       - stationID
 
-  SesseionQRCode:
+  Session:
     type: object
     properties:
-      sessionID:
+      ID:
         type: string
       QR:
         type: string
 
-  RefreshData:
+  SessionRefresh:
     type: object
     properties:
       userID:
@@ -2420,18 +2420,22 @@ paths:
           required: true
           in: body
           schema:
-            title: "ArgCreateSession"
+            title: "CreateSession"
             type: object
             required:
-              - key
+              - hash
             properties:
-              key:
+              hash:
                 type: string
       responses:
         200:
           description: OK
           schema:
-            $ref: '#/definitions/SesseionQRCode'
+            $ref: '#/definitions/Session'
+        404:
+          description: hash not found
+        500:
+            description: Internal error
 
   /refresh-session:
     post:
@@ -2441,18 +2445,22 @@ paths:
           required: true
           in: body
           schema:
-            title: "ArgRefreshSession"
+            title: "RefreshSession"
             type: object
             required:
-              - key
+              - hash
             properties:
-              key:
+              hash:
                 type: string
       responses:
         200:
           description: OK
           schema:
-            $ref: '#/definitions/RefreshData'
+            $ref: '#/definitions/SessionRefresh'
+        404:
+          description: hash not found
+        500:
+            description: Internal error
 
   /end-session:
     post:
@@ -2465,11 +2473,15 @@ paths:
             title: "ArgEndSession"
             type: object
             required:
-              - key
+              - hash
             properties:
-              key:
+              hash:
                 type: string
       responses:
         204:
           description: OK
+        404:
+          description: hash not found
+        500:
+            description: Internal error
   
